Estrutura da página

--- a/index.html
+++ b/index.html
@@ -1,22 +1,35 @@
 <!DOCTYPE html>
-<html>
-<head>
-    <title>Quizizz Divertido</title>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, inicial-scale=1">
-    <link rel="stylesheet" href="style.css">
-    
-</head>
+<html lang="pt-br">
 
-<body>
+    <head>
+        <title>Quizizz Divertido</title>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, inicial-scale=1">
+        <link rel="stylesheet" href="style.css">
+        <script src="main.js"></script>
+    </head>
+
+    <body>
+        <div class="caixa-principal">
+            <h1> Você decide o futuro da IA </h1>
+
+            <div class="caixa-perguntas">
+
+            </div>
+
+            <div class="caixa-respostas">
+
+            </div>
+
+        </div>
 
 
 
-</body>
+    </body>
 
-<footer>
+    <footer>
 
 
-</footer>
+    </footer>
 
 </html>
