--- a/index.html
+++ b/index.html
@@ -13,12 +13,12 @@
         <div class="caixa-principal">
             <h1> Você decide o futuro da IA </h1>
 
-            <div class="caixa-perguntas">
+            <div class="caixa-perguntas"></div>
 
-            </div>
+            <div class="caixa-alternativas"></div>
 
-            <div class="caixa-respostas">
-
+            <div class="caixa-resultado">
+                <p class="texto-resultado"></p>
             </div>
 
         </div>
