Melhorando o texto e aparencia

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="pt-br">
 
     <head>
-        <title>Quizizz Divertido</title>
+        <title>Quiz Divertido</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, inicial-scale=1.0">
         <link rel="stylesheet" href="style.css">
@@ -14,7 +14,7 @@
 
     <body>
         <div class="caixa-principal">
-            <h1> Você decide o futuro da IA </h1>
+            <h1> Participe do Quiz e decida o futuro da IA </h1>
 
             <div class="caixa-perguntas"></div>
 
